--- a/virion.yml
+++ b/virion.yml
@@ -1,8 +1,8 @@
 ---
-name: LocaleConverter
+name: locale-converter
 antigen: blugin\lib\converter\locale
 version: 1.0.1
 api: 3.0.0
-authors: ['Blugin-team', 'PresentKim']
-description: "Converter to convert IETF_language_tag to ISO_639-3 code"
+authors: [PresentKim, Blugin-team]
+description: Converter to convert IETF_language_tag to ISO_639-3 code
 ...
